# magic-github-crawler

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  crawler_two_pages.yaml  docker-compose.yml  github_search.yaml  pyproject.toml  stars.csv
.github/workflows/: crawl.yml
alembic/: env.py
alembic/versions/: 3726456ccdbb_add_repo_tables.py  6ae46ba7dd8a_initial_schema.py
src/ghcrawler/: cli.py  config.py
src/ghcrawler/api/: __init__.py  github_client.py  rate_limiting.py
src/ghcrawler/core/: crawler.py
src/ghcrawler/db/: __init__.py  dal.py  engine.py  models.py
tests/: conftest.py  fixtures.py
tests/integration/: test_crawler_loop.py  test_schema.py
tests/unit/: test_dal.py  test_github_client.py
